...

- (void)rewardedVideoAdCompleted:(nonnull MATRewardedVideoAd *)rewardedVideoAd {
    [self.iSDelegate adDidEnd];
    //For XCTest
    UIButton *closeBtn = [[UIButton alloc] initWithFrame:CGRectMake(10, 20, 2, 2)];
    closeBtn.backgroundColor = [UIColor blackColor];
    closeBtn.accessibilityIdentifier = @"ad_closeBtn";
    [closeBtn setTitle:@"x" forState:UIControlStateNormal];
    [closeBtn setTitleColor:[UIColor blackColor] forState:UIControlStateNormal];
    [closeBtn setTitleColor:[UIColor blackColor] forState:UIControlStateHighlighted];
    [closeBtn addTarget:self action:@selector(closeButtonTouchDown:) forControlEvents:UIControlEventTouchDown];
    [rewardedVideoAd.modalViewController.view addSubview: closeBtn];
}
...
